--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-ultralytics==8.0.232
-opencv-python-headless==4.9.0.80
-numpy<2
+ultralytics
+opencv-python-headless
+numpy
 torch
 torchvision
 streamlit
